--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CameraTest1</string>
+    <string name="capture">Capture</string>
+    <string name="record">Record</string>
 </resources>
